homemenuplanner-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homemenuplanner-deployment
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert:  arn:aws:acm:us-east-1:777605092423:certificate/4e588450-d436-4d08-affe-b4a5858f2d65
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: https
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
    # Note that the backend talks over HTTP.
    service.beta.kubernetes.io/aws-load-balancer-type: external
spec:
  replicas: 2
  selector:
    matchLabels:
      app: homemenuplanner
  template:
    metadata:
      labels:
        app: homemenuplanner
    spec:
      containers:
        - name: homemenuplanner
          image: rmstruthers1/homemenuplanner:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: tls-secret
              mountPath: "/etc/tls"
              readOnly: true
      volumes:
        - name: tls-secret
          secret:
            secretName: homemenuplanner-tls-secret
      imagePullSecrets:
        - name: dockerhub-secret
---
apiVersion: v1
kind: Service
metadata:
  name: homemenuplanner-service
spec:
  selector:
    app: homemenuplanner
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homemenuplanner-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:777605092423:certificate/9d381ee5-973e-400e-b658-ec76686088f2
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
spec:
  tls:
    - hosts:
        - api.homemenuplanner.com
      secretName: homemenuplanner-tls-secret
  rules:
    - host: api.homemenuplanner.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homemenuplanner-service
                port:
                  number: 80
